// File: dev_microservice2/internal/services/document_service.go

package services

import (
	"context"
	"log"

	pb "github.com/Nazerkh09/gajap/dev_microservice2/protobuf"
)

type DocumentService struct {
}

func (s *DocumentService) CreateDocument(ctx context.Context, req *pb.CreateDocumentRequest) (*pb.CreateDocumentResponse, error) {
	// TODO: Implement document creation logic
	log.Println("CreateDocument request received")

	// Example response
	response := &pb.CreateDocumentResponse{
		DocumentId: "123",
		Message:    "Document created successfully",
	}

	return response, nil
}

func (s *DocumentService) GetDocument(ctx context.Context, req *pb.GetDocumentRequest) (*pb.GetDocumentResponse, error) {
	// TODO: Implement document retrieval logic
	log.Println("GetDocument request received")

	// Example response
	response := &pb.GetDocumentResponse{
		DocumentId: "123",
		Title:      "Sample Document",
	}

	return response, nil
}

func (s *DocumentService) UpdateDocument(ctx context.Context, req *pb.UpdateDocumentRequest) (*pb.UpdateDocumentResponse, error) {
	// TODO: Implement document update logic
	log.Println("UpdateDocument request received")

	// Example response
	response := &pb.UpdateDocumentResponse{
		Message: "Document updated successfully",
	}

	return response, nil
}

func (s *DocumentService) DeleteDocument(ctx context.Context, req *pb.DeleteDocumentRequest) (*pb.DeleteDocumentResponse, error) {
	// TODO: Implement document deletion logic
	log.Println("DeleteDocument request received")

	// Example response
	response := &pb.DeleteDocumentResponse{
		Message: "Document deleted successfully",
	}

	return response, nil
}
